# ze-gourm-db

./: .gitignore  LICENSE  README.md  build.sh
client/: Cargo.toml
client/common/: Cargo.toml
client/common/src/: lib.rs  serx.rs
client/ed-it/: Cargo.toml  testfile.txt
client/ed-it/src/: lib.rs  main.rs
docs/: API.txt  clients.de.txt  clients.txt  clients_input_format.txt
docs/ground/: database.de.txt
docs/ground/de_kochbuch/: errmsg.php  index.html  list.php  rezept.php
